# linear-wrapper

./: Cargo.toml  flake.nix  tauri.conf.json
capabilities/: default.json
src/: badge.rs  commands.rs  main.rs  notifications.js  tray.rs  window.rs
src-frontend/: index.html
